Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16872

sanity: test_27M Error: '(5) stripe count , should be 8 for append'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Frank Sehr <fsehr@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/46d1b101-8e4f-4415-bb49-ee39963275fe

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/95319 - 4.18.0-425.10.1.el8_7.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/95319 - 4.18.0-425.10.1.el8_lustre.x86_64

      == sanity test 27M: test O_APPEND striping =============== 03:40:09 (1685936409)
      CMD: trevis-129vm4 /usr/sbin/lctl get_param -n version 2>/dev/null
      striped dir -i3 -c2 -H crush2 /mnt/lustre/d27M.sanity
      CMD: trevis-129vm4 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.append_pool
      CMD: trevis-129vm4 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.append_stripe_count
      CMD: trevis-129vm4,trevis-129vm5 /usr/sbin/lctl set_param mdd.*.append_stripe_count=0
      mdd.lustre-MDT0000.append_stripe_count=0
      mdd.lustre-MDT0002.append_stripe_count=0
      mdd.lustre-MDT0001.append_stripe_count=0
      mdd.lustre-MDT0003.append_stripe_count=0
      CMD: trevis-129vm4,trevis-129vm5 /usr/sbin/lctl set_param mdd.*.append_stripe_count=2
      mdd.lustre-MDT0000.append_stripe_count=2
      mdd.lustre-MDT0002.append_stripe_count=2
      mdd.lustre-MDT0001.append_stripe_count=2
      mdd.lustre-MDT0003.append_stripe_count=2
      CMD: trevis-129vm4,trevis-129vm5 /usr/sbin/lctl set_param mdd.*.append_stripe_count=-1
      mdd.lustre-MDT0000.append_stripe_count=-1
      mdd.lustre-MDT0002.append_stripe_count=-1
      mdd.lustre-MDT0001.append_stripe_count=-1
      mdd.lustre-MDT0003.append_stripe_count=-1
      /usr/lib64/lustre/tests/sanity.sh: line 3101: /mnt/lustre/d27M.sanity/f27M.sanity.5: Invalid argument
      lfs: getstripe for '/mnt/lustre/d27M.sanity/f27M.sanity.5' failed: No such file or directory
      /usr/lib64/lustre/tests/sanity.sh: line 3103: [: -eq: unary operator expected
      sanity test_27M: @@@@@@ FAIL: (5) stripe count , should be 8 for append
      Trace dump:
      = /usr/lib64/lustre/tests/test-framework.sh:6585:error()
      = /usr/lib64/lustre/tests/sanity.sh:3104:test_27M()
      = /usr/lib64/lustre/tests/test-framework.sh:6925:run_one()
      = /usr/lib64/lustre/tests/test-framework.sh:6974:run_one_logged()
      = /usr/lib64/lustre/tests/test-framework.sh:6811:run_test()
      = /usr/lib64/lustre/tests/sanity.sh:3181:main()
      Dumping lctl log to /autotest/autotest-2/2023-06-05/lustre-reviews_review-ldiskfs-dne_95319_27_26b27a74-2421-4453-9c33-cd237feca413//sanity.test_27M.*.1685936415.log
      CMD: trevis-129vm1.trevis.whamcloud.com,trevis-129vm2,trevis-129vm3,trevis-129vm4,trevis-129vm5 /usr/sbin/lctl dk > /autotest/autotest-2/2023-06-05/lustre-reviews_review-ldiskfs-dne_95319_27_26b27a74-2421-4453-9c33-cd237feca413//sanity.test_27M.debug_log.\$(hostname -s).1685936415.log;
      dmesg > /autotest/autotest-2/2023-06-05/lustre-reviews_review-ldiskfs-dne_95319_27_26b27a74-2421-4453-9c33-cd237feca413//sanity.test_27M.dmesg.\$(hostname -s).1685936415.log
      CMD: trevis-129vm4,trevis-129vm5 /usr/sbin/lctl set_param mdd.*.append_stripe_count=1
      mdd.lustre-MDT0000.append_stripe_count=1
      mdd.lustre-MDT0002.append_stripe_count=1
      mdd.lustre-MDT0001.append_stripe_count=1
      mdd.lustre-MDT0003.append_stripe_count=1
      CMD: trevis-129vm4,trevis-129vm5 /usr/sbin/lctl set_param mdd.*.append_pool=none
      mdd.lustre-MDT0000.append_pool=none
      mdd.lustre-MDT0002.append_pool=none
      mdd.lustre-MDT0001.append_pool=none
      mdd.lustre-MDT0003.append_pool=none

            bertschinger Thomas Bertschinger
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: